--- a/src/styles/_container.css
+++ b/src/styles/_container.css
@@ -1,5 +1,5 @@
 .container {
-    width: 960px;
+    max-width: 1440px;
     border-left: var(--container-padding) solid transparent;
     border-right: var(--container-padding) solid transparent;
     margin-left: auto;
