--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -12,7 +12,9 @@
     /*--disabled-background: #F6F6F6;*/
     /*--disabled-color: #999999;*/
     /*--error: #FF0033;*/
+    --beige: #FAF6F2;
     --orange: #FC5E38;
+    --black: #0F1015;
 }
 
 @media (350px <= width < 600px) {
