--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -46,3 +46,46 @@
                     vertical-align: top;
                     fill: #FFDDD1;
                 }
+
+
+
+@media (width < 740px) {
+
+    .footer {
+        padding-top: 23px;
+        padding-bottom: 21px;
+    }
+        .footer__wrap {
+            display: block;
+        }
+            .footer__copyright {
+                width: fit-content;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .footer__media {
+                margin-top: 11px;
+                margin-left: -10px;
+                margin-right: -10px;
+                justify-content: center;
+                gap: 0;
+            }
+                .footer__network {
+                    padding-left: 12px;
+                    padding-right: 12px;
+                    font-size: 14px;
+                    line-height: 20px;
+                }
+
+                @media (width < 350px) {
+
+                    .footer__network {
+                        padding-left: 8px;
+                        padding-right: 8px;
+                        gap: 6px;
+                        font-size: 13px;
+                    }
+                }
+}
+
