--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -61,28 +61,30 @@
             </h2>
             <div class="contacts__body">
                 <div class="contacts__preview">
-
+                    <!-- temp -->
+                    <div style="height: 100%; background: purple; color: white; display: flex; align-items: center; justify-content: center; text-align: center">Виджет карты<br> 100% x 100%</div>
+                    <!--/temp -->
                 </div>
                 <div class="contacts__data">
                     <div class="contacts__channel">
                         <h3 class="contacts__sub-heading">
                             Наш адрес
                         </h3>
-                        <div class="contacts__value">
+                        <div class="contacts__address">
                             г. Москва,<br>
-                            Петровский бульвар 15, стр. 1.
+                            Петровский бульвар&nbsp;15, <span class="nobr">стр. 1</span>.
                         </div>
-                        <div class="contacts__addition">
+                        <div class="contacts__metro">
                             Ближайшие станции метро:<br>
                             Трубная, Цветной бульвар, Чеховская, Тверская, Пушкинская.
                         </div>
                     </div>
                     <div class="contacts__channel">
                         <h3 class="contacts__sub-heading">
-
+                            Время работы офиса
                         </h3>
-                        <div class="contacts__value">
-
+                        <div class="contacts__hours">
+                            <span class="nobr">с 10:00</span> <span class="nobr">до 18:00</span> по&nbsp;будням.
                         </div>
                     </div>
                 </div>
@@ -90,7 +92,7 @@
         </section>
 
         <footer class="footer">
-            <div class="footer__wrap container">
+            <div class="footer__wrap container container--wide">
                 <div class="footer__copyright">
                     ЕГЭ-студия 2023
                 </div>
