--- a/src/styles/_container.css
+++ b/src/styles/_container.css
@@ -1,14 +1,12 @@
 .container {
-    max-width: 1440px;
+    width: 1206px;
     border-left: var(--container-padding) solid transparent;
     border-right: var(--container-padding) solid transparent;
     margin-left: auto;
     margin-right: auto;
 }
 
-@media (width < 600px) {
-
-    .container {
-        width: auto;
-    }
+.container--wide {
+    width: auto;
+    max-width: 1440px;
 }
