--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -1,4 +1,5 @@
 .footer {
+    margin-top: 83px;
     padding-top: 12px;
     padding-bottom: 12px;
     background-color: #FFFFFF;
@@ -52,6 +53,7 @@
 @media (width < 740px) {
 
     .footer {
+        margin-top: 80px;
         padding-top: 23px;
         padding-bottom: 21px;
     }
