--- a/src/styles/_title.css
+++ b/src/styles/_title.css
@@ -4,3 +4,14 @@
     line-height: 48px;
     color: var(--black);
 }
+
+
+@media (width < 740px) {
+
+    .title {
+        font-size: 26px;
+        line-height: 34px;
+    }
+}
+
+
