--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -1,14 +1,18 @@
 .button {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     vertical-align: top;
     border: none;
-    padding: 13px 24px;
+    padding: 14px 30px;
     min-width: 100px;
-    background-color: var(--action-color);
-    border-radius: 4px;
+    background-color: var(--orange);
+    border-radius: 8px;
     font-family: inherit;
-    font-size: 16px;
-    line-height: 24px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 26px;
     color: #FFFFFF;
     text-align: center;
     text-decoration: none;
@@ -19,7 +23,7 @@
 }
 
 .button:hover {
-    background-color: var(--action-color-hover);
+    background-color: var(--orange-90pct);
 }
 
 
@@ -31,21 +35,27 @@
 .button:disabled,
 .button:disabled:hover,
 .button:disabled:active {
-    background-color: #F6F6F6;
+    background-color: var(--disabled-background);
     color: var(--disabled-color);
     translate: none;
     cursor: default;
 }
 
+
 .button--secondary {
-    box-shadow: inset 0 0 0 2px var(--action-color);
-    background-color: transparent;
-    color: var(--action-color);
+    background-color: #FFFFFF;
+    color: var(--black);
 }
+    .button--secondary .button__icon {
+        fill: var(--orange);
+    }
 
 .button--secondary:hover {
     background-color: #F3F9FF;
 }
-
+    .button__icon {
+        vertical-align: top;
+        fill: currentColor;
+    }
 
 
