--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -7,13 +7,12 @@
     --transition-show: 1200ms var(--ease-out-quint);
     --image-fallback: #F3F5F4;
     --container-padding: 30px;
-    /*--action-color: #0D7FC5;*/
-    /*--action-color-hover: #2FA5ED;*/
-    /*--disabled-background: #F6F6F6;*/
-    /*--disabled-color: #999999;*/
+    --disabled-background: #EAEAEA;
+    --disabled-color: #999999;
     /*--error: #FF0033;*/
     --beige: #FAF6F2;
     --orange: #FC5E38;
+    --orange-90pct: #FD7658;
     --black: #0F1015;
 }
 
