--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,5 +18,7 @@
 @import url("_footer.css");
 @import url("_title.css");
 @import url("_contacts.css");
+@import url("_cta.css");
+@import url("_info.css");
 
 
