--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,21 @@
             </div>
         <![endif]-->
 
+        <section class="info container">
+            <div class="info__inner">
+                <h2 class="info__heading title">
+                    СЕО-текст
+                </h2>
+                <div class="info__body wysiwyg">
+                    <p>ЕГЭ-Студия — это коллектив педагогов, умеющих готовить на высокие баллы. Каждый год мы подтверждаем это результатами наших абитуриентов.</p>
+                    <p>100 баллов каждый год (За 2016-2023 учебные годы мы подготовили 31 100-балльника).</p>
+                    <p>Многие сдают на 80+ и 90+ баллов (65 учеников на 98-99 баллов за 2016-2023 гг.).</p>
+                    <p>Мы стремимся вытянуть абитуриента на максимально возможный для него результат.</p>
+                    <p>Мы команда профессионалов, более 15 лет готовящая абитуриентов к ЕГЭ. Мы контролируем результаты каждого учащегося, проводим сессии, зачеты, переводные экзамены. Ежегодно у нас всего 200 мест, 60% из них заполняются по рекомендациям.</p>
+                </div>
+            </div>
+        </section>
+
         <section class="contacts container">
             <h2 class="contacts__heading title">
                 Карта проезда
@@ -90,6 +105,17 @@
                 </div>
             </div>
         </section>
+
+        <div class="cta container">
+            <div class="cta__frame">
+                <button class="button" type="button">
+                    Сдать ЕГЭ на 100 баллов с нами
+                    <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                        <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
 
         <footer class="footer">
             <div class="footer__wrap container container--wide">
