--- a/src/styles/_wysiwyg.css
+++ b/src/styles/_wysiwyg.css
@@ -10,8 +10,8 @@
 .wysiwyg hr,
 .wysiwyg figure,
 .wysiwyg blockquote {
-    margin-top: var(--body-line-height);
-    margin-bottom: var(--body-line-height);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .wysiwyg p:first-child,
