--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,31 @@
             </div>
         <![endif]-->
 
+        <div class="container">
+
+            <!-- Slider main container -->
+            <div class="swiper" >
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
+                </div>
+
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+                <!-- If we need scrollbar -->
+                <div class="swiper-scrollbar"></div>
+            </div>
+
+        </div>
+
         <section class="info container">
             <div class="info__inner">
                 <h2 class="info__heading title">
@@ -145,6 +170,7 @@
             </div>
         </footer>
 
+        <script src="../vendors/swiper/swiper-bundle.min.js"></script>
         <script src="../scripts/scripts.js"></script>
 
 
