--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,5 @@
 @import url("../vendors/normalize/normalize.css");
+@import url("../vendors/swiper/swiper-bundle.min.css");
 @import url("_fonts.css");
 @import url("_box-sizing.css");
 @import url("_visuallyhidden.css");
