--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,5 +21,8 @@
 @import url("_contacts.css");
 @import url("_cta.css");
 @import url("_info.css");
+@import url("_entry.css");
+@import url("_blog.css");
+@import url("_swiper.css");
 
 
