--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,27 +55,148 @@
             </div>
         <![endif]-->
 
-        <div class="container">
+        <div class="blog container container--wide">
 
-            <!-- Slider main container -->
-            <div class="swiper" >
-                <!-- Additional required wrapper -->
+            <div class="swiper swiper--blog">
                 <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Подготовка к ЕГЭ-2024: задачи по геометрии
+                                </h2>
+                                <div class="entry__description">
+                                    В ЕГЭ-2024 по математике множество вопросов по геометрии. Наш мини-курс поможет вам разобраться с ними.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Как сдать ЕГЭ-2024 по математике на 100 баллов
+                                </h2>
+                                <div class="entry__description">
+                                    Узнайте секреты успешной сдачи ЕГЭ-2024 и получите максимальные баллы. Все подробности в нашем курсе.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Важные темы на ЕГЭ-2024: тригонометрия
+                                </h2>
+                                <div class="entry__description">
+                                    Тригонометрия — одна из ключевых тем на ЕГЭ-2024. Наши материалы помогут вам понять и выучить её.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Подготовка к ЕГЭ-2024: алгебра
+                                </h2>
+                                <div class="entry__description">
+                                    Изучение алгебры — важный этап подготовки к ЕГЭ. Наш курс предлагает полный разбор всех заданий.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Практические советы по подготовке к ЕГЭ-2024
+                                </h2>
+                                <div class="entry__description">
+                                    Практические советы и рекомендации помогут вам эффективно подготовиться к ЕГЭ-2024 по математике.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Решение задач по вероятности на ЕГЭ-2024
+                                </h2>
+                                <div class="entry__description">
+                                    На ЕГЭ-2024 представлены задачи по теории вероятностей. В нашем курсе вы найдете их полное решение.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Подготовка к ЕГЭ-2024: алгебра
+                                </h2>
+                                <div class="entry__description">
+                                    Изучение алгебры — важный этап подготовки к ЕГЭ. Наш курс предлагает полный разбор всех заданий.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Практические советы по подготовке к ЕГЭ-2024
+                                </h2>
+                                <div class="entry__description">
+                                    Практические советы и рекомендации помогут вам эффективно подготовиться к ЕГЭ-2024 по математике.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="entry">
+                            <a class="entry__link" href="#">
+                                <h2 class="entry__heading">
+                                    Решение задач по вероятности на ЕГЭ-2024
+                                </h2>
+                                <div class="entry__description">
+                                    На ЕГЭ-2024 представлены задачи по теории вероятностей. В нашем курсе вы найдете их полное решение.
+                                </div>
+                                <div class="entry__more">
+                                    Читать далее
+                                </div>
+                            </a>
+                        </article>
+                    </div>
                 </div>
 
-                <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
-
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-
-                <!-- If we need scrollbar -->
-                <div class="swiper-scrollbar"></div>
             </div>
 
         </div>
