--- a/src/styles/_swiper.css
+++ b/src/styles/_swiper.css
@@ -13,6 +13,7 @@
         position: static;
         display: flex;
         align-items: stretch;
+        justify-content: center;
     }
         .swiper-pagination-bullet {
             flex-shrink: 0;
@@ -72,7 +73,7 @@
                 /*margin: 0 !important;*/
                 /*background-color: transparent;*/
                 /*border-radius: 0;*/
-                padding: 12px;
+                padding: 10px;
                 /*width: auto;*/
                 /*height: auto;*/
                 /*opacity: 100%;*/
