--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -57,8 +57,10 @@
 
         <div class="cut-sliders">
             <div class="blog container container--wide">
-
-                <div class="swiper swiper--blog">
+                <h2 class="blog__heading title">
+                    Полезные статьи
+                </h2>
+                <div class="blog__body swiper swiper--blog">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <article class="entry">
