--- a/src/styles/_entry.css
+++ b/src/styles/_entry.css
@@ -42,3 +42,53 @@
         .entry__more:hover {
             text-decoration-color: transparent;
         }
+
+
+
+@media (width < 740px) {
+
+    .entry {
+        /*display: block;*/
+        /*height: 100%;*/
+    }
+        .entry__link {
+            /*display: block;*/
+            /*height: 100%;*/
+            padding: 27px 20px 19px;
+            /*background-color: #FFFFFF;*/
+            border-top-width: 6px;
+            /*border-radius: 8px;*/
+            /*text-decoration: none;*/
+            /*color: inherit;*/
+            /*transition: background-color var(--transition-hover);*/
+        }
+
+        .entry__link:hover {
+            /*background-color: #FBFBFB;*/
+        }
+            .entry__heading {
+                /*margin-top: 0;*/
+                /*margin-bottom: 0;*/
+                /*font-weight: bold;*/
+                font-size: 20px;
+                line-height: 26px;
+            }
+
+            .entry__description {
+                margin-top: 20px;
+            }
+
+            .entry__more {
+                margin-top: 8px;
+                /*padding-top: 10px;*/
+                /*padding-bottom: 10px;*/
+                /*width: fit-content;*/
+                /*text-decoration: 1px underline currentColor;*/
+                /*text-underline-offset: 4px;*/
+                /*transition: text-decoration-color var(--transition-hover);*/
+            }
+
+            .entry__more:hover {
+                /*text-decoration-color: transparent;*/
+            }
+}
