--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,69 @@
             </div>
         <![endif]-->
 
+        <section class="faq container">
+            <h2 class="faq__heading title">
+                Ответы на часто задаваемые вопросы
+            </h2>
+            <div class="faq__section">
+                <h3 class="faq__sub-heading">
+                    Общее
+                </h3>
+                <div class="faq__accordion">
+                    <div class="faq__item">
+                        <button class="faq__question" type="button">
+                            Есть ли у вас постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей?
+                        </button>
+                        <div class="faq__dropdown wysiwyg">
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <button class="faq__question" type="button">
+                            Какой состав для проведения еэегодных выездных мероприятий?
+                        </button>
+                        <div class="faq__dropdown wysiwyg">
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <button class="faq__question" type="button">
+                            Какой средний балл ученика при поступлении?
+                        </button>
+                        <div class="faq__dropdown wysiwyg">
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="faq__section">
+                <h3 class="faq__sub-heading">
+                    Оплата
+                </h3>
+                <div class="faq__accordion">
+                    <div class="faq__item">
+                        <button class="faq__question" type="button">
+                            Какой состав для проведения еэегодных выездных мероприятий?
+                        </button>
+                        <div class="faq__dropdown wysiwyg">
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <button class="faq__question" type="button">
+                            Какой средний балл ученика при поступлении?
+                        </button>
+                        <div class="faq__dropdown wysiwyg">
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <div class="cut-sliders">
             <div class="blog container container--wide">
                 <h2 class="blog__heading title">
