--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -66,19 +66,19 @@
                 <div class="faq__accordion">
                     <div class="faq__item">
                         <button class="faq__question" type="button">
-                            Есть ли у вас постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей?
+                            Есть ли у вас постоянный преподаваительский состав для проведения ежегодных выездных мероприятий для старшеклассников и учителей?
                         </button>
                         <div class="faq__dropdown wysiwyg">
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>Наш преподавательский состав состоит из высококвалифицированных специалистов, которые регулярно участвуют в наших мероприятиях.</p>
                         </div>
                     </div>
                     <div class="faq__item">
                         <button class="faq__question" type="button">
-                            Какой состав для проведения еэегодных выездных мероприятий?
+                            Какой состав для проведения ежегодных выездных мероприятий?
                         </button>
                         <div class="faq__dropdown wysiwyg">
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>Наши мероприятия включают лекции, семинары и практические занятия, которые проводят опытные преподаватели и специалисты.</p>
+                            <p>Преподаватели также проводят индивидуальные консультации для учеников и их родителей.</p>
                         </div>
                     </div>
                     <div class="faq__item">
@@ -86,8 +86,8 @@
                             Какой средний балл ученика при поступлении?
                         </button>
                         <div class="faq__dropdown wysiwyg">
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>Средний балл учеников, поступающих в наш учебный центр, обычно составляет 90 и выше.</p>
+                            <p>Кроме того, учитываются внеклассные достижения и активное участие в школьной жизни.</p>
                         </div>
                     </div>
                 </div>
@@ -99,10 +99,10 @@
                 <div class="faq__accordion">
                     <div class="faq__item">
                         <button class="faq__question" type="button">
-                            Какой состав для проведения еэегодных выездных мероприятий?
+                            Какой состав для проведения ежегодных выездных мероприятий?
                         </button>
                         <div class="faq__dropdown wysiwyg">
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>Мероприятия включают различные тренинги и мастер-классы, которые ведут признанные эксперты в своих областях.</p>
                         </div>
                     </div>
                     <div class="faq__item">
@@ -110,13 +110,14 @@
                             Какой средний балл ученика при поступлении?
                         </button>
                         <div class="faq__dropdown wysiwyg">
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
-                            <p>У нас есть постоянный преподаваительский состав для проведения еэегодных выездных мероприятий для старшеклассников и учителей, а также для родителей, желающих посетить данной мероприятие.</p>
+                            <p>Средний балл при поступлении варьируется в зависимости от программы, но обычно не ниже 85.</p>
+                            <p>Мы также предлагаем различные стипендии для талантливых студентов.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
 
         <div class="cut-sliders">
             <div class="blog container container--wide">
