--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,70 @@
             </div>
         <![endif]-->
 
+        <section class="online container container--wide">
+            <h2 class="online__heading title">
+                Хотите заниматься онлайн?
+            </h2>
+            <div class="online__body">
+                <article class="online__item">
+                    <div class="online__head">
+                        <h3 class="online__sub-heading">
+                            Курс на 100 баллов
+                        </h3>
+                        <div class="online__price">
+                            76 000 ₽/год
+                        </div>
+                    </div>
+                    <div class="online__content wysiwyg">
+                        <ul>
+                            <li>Теория: учебник + 70 ч. видеоразборов.</li>
+                            <li>2 занятия в неделю</li>
+                            <li>Тренажер (800+ задач)</li>
+                            <li>Связь с преподавателем (чаты и почта).</li>
+                            <li>9 репетиционных ЕГЭ: ежемесячно.</li>
+                            <li>Контроль: страница личных достижений учащегося, отчеты родителям.</li>
+                        </ul>
+                    </div>
+                    <div class="online__submit">
+                        <button class="button" type="button">
+                            Записаться
+                            <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                                <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </article>
+                <article class="online__item">
+                    <div class="online__head">
+                        <h3 class="online__sub-heading">
+                            Курс на 100 баллов
+                        </h3>
+                        <div class="online__price">
+                            76 000 ₽/год
+                        </div>
+                    </div>
+                    <div class="online__content wysiwyg">
+                        <ul>
+                            <li>Теория: учебник + 70 ч. видеоразборов.</li>
+                            <li>2 занятия в неделю</li>
+                            <li>Тренажер (800+ задач)</li>
+                            <li>Связь с преподавателем (чаты и почта).</li>
+                            <li>9 репетиционных ЕГЭ: ежемесячно.</li>
+                            <li>Контроль: страница личных достижений учащегося, отчеты родителям.</li>
+                        </ul>
+                    </div>
+                    <div class="online__submit">
+                        <button class="button" type="button">
+                            Записаться
+                            <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                                <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </article>
+            </div>
+        </section>
+
         <section class="faq container">
             <h2 class="faq__heading title">
                 Ответы на часто задаваемые вопросы
@@ -117,7 +181,6 @@
                 </div>
             </div>
         </section>
-
 
         <div class="cut-sliders">
             <div class="blog container container--wide">
@@ -262,10 +325,10 @@
                             </article>
                         </div>
                     </div>
+                    <div class="swiper-pagination">
 
-                    <div class="swiper-pagination"></div>
+                    </div>
                 </div>
-
             </div>
 
             <section class="info container">
