--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -91,20 +91,21 @@
                 <article class="online__item">
                     <div class="online__head">
                         <h3 class="online__sub-heading">
-                            Курс на 100 баллов
+                            Курс на 100 баллов с куратором
                         </h3>
                         <div class="online__price">
-                            76 000 ₽/год
+                            6 000 ₽/мес
                         </div>
                     </div>
                     <div class="online__content wysiwyg">
+                        <h2>
+                            Курс на 100 баллов +
+                        </h2>
                         <ul>
-                            <li>Теория: учебник + 70 ч. видеоразборов.</li>
-                            <li>2 занятия в неделю</li>
-                            <li>Тренажер (800+ задач)</li>
-                            <li>Связь с преподавателем (чаты и почта).</li>
-                            <li>9 репетиционных ЕГЭ: ежемесячно.</li>
-                            <li>Контроль: страница личных достижений учащегося, отчеты родителям.</li>
+                            <li>Входное тестирование.</li>
+                            <li>Личный куратор.</li>
+                            <li>2 личных домашних задания в неделю с проверкой.</li>
+                            <li>Постоянная обратная связь от куратора</li>
                         </ul>
                     </div>
                     <div class="online__submit">
