--- a/src/styles/_online.css
+++ b/src/styles/_online.css
@@ -14,6 +14,8 @@
         gap: 20px;
     }
         .online__item {
+            display: flex;
+            flex-direction: column;
             padding: 46px 50px 49px;
             background-color: #FFFFFF;
             border-radius: 20px;
@@ -42,10 +44,11 @@
 
             .online__content {
                 margin-top: 50px;
+                margin-bottom: 50px;
             }
 
             .online__submit {
-                margin-top: 50px;
+                margin-top: auto;
             }
                 .online__submit.button,
                 .online__submit .button {
