--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -69,15 +69,17 @@
                             76 000 ₽/год
                         </div>
                     </div>
-                    <div class="online__content wysiwyg">
-                        <ul>
-                            <li>Теория: учебник + 70 ч. видеоразборов.</li>
-                            <li>2 занятия в неделю</li>
-                            <li>Тренажер (800+ задач)</li>
-                            <li>Связь с преподавателем (чаты и почта).</li>
-                            <li>9 репетиционных ЕГЭ: ежемесячно.</li>
-                            <li>Контроль: страница личных достижений учащегося, отчеты родителям.</li>
-                        </ul>
+                    <div class="online__content">
+                        <div class="online__description wysiwyg">
+                            <ul>
+                                <li>Теория: учебник + 70 ч. видеоразборов.</li>
+                                <li>2 занятия в неделю</li>
+                                <li>Тренажер (800+ задач)</li>
+                                <li>Связь с преподавателем (чаты и почта).</li>
+                                <li>9 репетиционных ЕГЭ: ежемесячно.</li>
+                                <li>Контроль: страница личных достижений учащегося, отчеты родителям.</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="online__submit">
                         <button class="button" type="button">
@@ -97,16 +99,18 @@
                             6 000 ₽/мес
                         </div>
                     </div>
-                    <div class="online__content wysiwyg">
-                        <h2>
+                    <div class="online__content">
+                        <div class="online__alt-heading">
                             Курс на 100 баллов +
-                        </h2>
-                        <ul>
-                            <li>Входное тестирование.</li>
-                            <li>Личный куратор.</li>
-                            <li>2 личных домашних задания в неделю с проверкой.</li>
-                            <li>Постоянная обратная связь от куратора</li>
-                        </ul>
+                        </div>
+                        <div class="online__description wysiwyg">
+                            <ul>
+                                <li>Входное тестирование.</li>
+                                <li>Личный куратор.</li>
+                                <li>2 личных домашних задания в неделю с проверкой.</li>
+                                <li>Постоянная обратная связь от куратора</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="online__submit">
                         <button class="button" type="button">
