--- a/src/styles/_online.css
+++ b/src/styles/_online.css
@@ -40,12 +40,27 @@
                     margin-left: auto;
                     font-size: 20px;
                     line-height: 26px;
+                    white-space: nowrap;
                 }
+
+            .online__alt-heading {
+                margin-bottom: 0;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 33px;
+            }
 
             .online__content {
                 margin-top: 50px;
                 margin-bottom: 50px;
             }
+                .online__alt-heading {
+                    margin-bottom: 31px;
+                }
+
+                .online__description {
+
+                }
 
             .online__submit {
                 margin-top: auto;
@@ -54,3 +69,80 @@
                 .online__submit .button {
                     width: 100%;
                 }
+
+
+
+@media (width < 740px) {
+
+    .online {
+        margin-top: 90px;
+    }
+        .online__heading {
+            /*margin-top: 0;*/
+            /*margin-bottom: 0;*/
+            /*text-align: center;*/
+        }
+
+        .online__body {
+            margin-top: 40px;
+            display: block;
+            /*grid-template-columns: repeat(2, 1fr);*/
+            /*gap: 20px;*/
+        }
+            .online__item {
+                margin-top: 26px;
+                /*display: flex;*/
+                /*flex-direction: column;*/
+                padding: 24px 20px;
+                /*background-color: #FFFFFF;*/
+                /*border-radius: 20px;*/
+            }
+
+            .online__item:first-child {
+                margin-top: 0;
+            }
+                .online__head {
+                    display: block;
+                    /*align-items: center;*/
+                    /*gap: 24px;*/
+                    padding: 19px 20px 14px;
+                    /*background-color: var(--light-orange);*/
+                    /*border-radius: 20px;*/
+                }
+                    .online__sub-heading {
+                        /*margin-top: 0;*/
+                        /*margin-bottom: 0;*/
+                        /*font-weight: bold;*/
+                        font-size: 20px;
+                        line-height: 27px;
+                        text-align: center;
+                    }
+
+                    .online__price {
+                        /*margin-left: auto;*/
+                        margin-top: 7px;
+                        font-size: 18px;
+                        line-height: 25px;
+                        /*white-space: nowrap;*/
+                        text-align: center;
+                    }
+
+                .online__alt-heading {
+                    font-size: 20px;
+                    line-height: 27px;
+                    margin-bottom: 20px;
+                }
+
+                .online__content {
+                    margin-top: 26px;
+                    margin-bottom: 26px;
+                }
+
+                .online__submit {
+                    /*margin-top: auto;*/
+                }
+                    .online__submit.button,
+                    .online__submit .button {
+                        /*width: 100%;*/
+                    }
+}
