--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,97 @@
             </div>
         <![endif]-->
 
+        <section class="us container container--wide">
+            <h2 class="us__heading title">
+                Почему выбирают именно нас?
+            </h2>
+            <div class="us__list">
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#FFDC5D" d="M30 20.145s.094-2.362-1.791-3.068c-1.667-.625-2.309.622-2.309.622s.059-1.913-1.941-2.622c-1.885-.667-2.75.959-2.75.959s-.307-1.872-2.292-2.417C17.246 13.159 16 14.785 16 14.785V2.576C16 1.618 15.458.001 13.458 0 11.458-.001 11 1.66 11 2.576v20.5c0 1-1 1-1 0V20.41c0-3.792-2.037-6.142-2.75-6.792-.713-.65-1.667-.98-2.82-.734-1.956.416-1.529 1.92-.974 3.197 1.336 3.078 2.253 7.464 2.533 9.538.79 5.858 5.808 10.375 11.883 10.381 6.626.004 12.123-5.298 12.128-11.924v-3.931Z"/>
+                    </svg>
+                    <div class="us__label">
+                        Ограниченное количество учеников на курсах, за год максимум 200 человек
+                    </div>
+                </div>
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#8899A6" d="m15 9 6-6s6-6 12 0 0 12 0 12l-8 8s-6 6-12 0c-1.125-1.125-1.822-2.62-1.822-2.62l3.353-3.348S14.396 18.396 16 20c0 0 3 3 6 0l8-8s3-3 0-6-6 0-6 0l-3.729 3.729s-1.854-1.521-5.646-.354L15 9Z"/>
+                        <path fill="#8899A6" d="m20.845 27-6 6s-6 6-12 0 0-12 0-12l8-8s6-6 12 0c1.125 1.125 1.822 2.62 1.822 2.62l-3.354 3.349s.135-1.365-1.469-2.97c0 0-3-3-6 0l-8 8s-3 3 0 6 6 0 6 0l3.729-3.728s1.854 1.52 5.646.354l-.374.375Z"/>
+                    </svg>
+                    <div class="us__label">
+                        40% обучающихся приходят по рекомендациям родителей выпускников
+                    </div>
+                </div>
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#55ACEE" d="M29 20.729v-1.963c1-1.03 2.914-2.89 3.391-5.273.142.079.055.13.213.13.758 0 1.256-.983 1.256-2.197 0-1.194-.656-2.161-1.399-2.191.143-.516.212-1.206.212-2.092 0-2.956-2.549-6.505-8.253-6.505-5.068 0-8.244 3.549-8.244 6.505 0 .858.051 1.562.142 2.107-.697.105-1.247 1.033-1.247 2.175 0 1.214.614 2.197 1.373 2.197.157 0-.069-.051.072-.13.477 2.384 2.484 4.243 3.484 5.274v1.847c-4 .492-7 2.628-7 4.765v.81c0 .812.823.812 1.634.812h18.73c.813 0 1.636 0 1.636-.812v-.81c0-2.001-3-3.997-6-4.65Z"/>
+                        <path fill="#269" d="M17 28.729v-1.963c1-1.03 2.914-2.89 3.391-5.273.142.079.055.13.213.13.758 0 1.256-.983 1.256-2.197 0-1.194-.656-2.161-1.399-2.191.143-.516.212-1.206.212-2.092 0-2.956-2.549-6.505-8.253-6.505-5.069 0-8.244 3.549-8.244 6.505 0 .858.051 1.562.142 2.107-.697.105-1.247 1.033-1.247 2.175 0 1.214.614 2.197 1.373 2.197.157 0-.069-.051.072-.13C4.993 23.876 7 25.735 8 26.766v1.847c-4 .492-7 2.628-7 4.765v.81C1 35 1.823 35 2.634 35h18.73c.813 0 1.636 0 1.636-.812v-.811c0-2-3-3.996-6-4.648Z"/>
+                    </svg>
+                    <div class="us__label">
+                        Не ставим для себя цель набрать как можно больше учеников
+                    </div>
+                </div>
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#FFAC33" d="M28.84 17.639c-.987 1.044-1.633 3.067-1.438 4.492l.892 6.442c.197 1.427-.701 2.087-1.996 1.468l-5.851-2.796c-1.295-.62-3.408-.61-4.7.018l-5.826 2.842c-1.291.63-2.193-.026-2.007-1.451l.843-6.45c.186-1.427-.475-3.444-1.47-4.48l-4.494-4.688c-.996-1.037-.655-2.102.755-2.365l6.37-1.189c1.41-.263 3.116-1.518 3.793-2.789L16.762.956c.675-1.27 1.789-1.274 2.473-.009L22.33 6.66c.686 1.265 2.4 2.507 3.814 2.758l6.378 1.142c1.412.252 1.761 1.313.774 2.358l-4.456 4.72Z"/>
+                        <path fill="#FFD983" d="M9.783 2.18c1.023 1.414 2.446 4.918 1.717 5.448-.728.53-3.607-1.91-4.63-3.323-1.022-1.413-.935-2.668-.131-3.254.804-.587 2.02-.282 3.044 1.13Zm19.348 2.125C28.109 5.718 25.23 8.16 24.5 7.627c-.729-.53.695-4.033 1.719-5.445C27.242.768 28.457.462 29.262 1.05c.803.586.89 1.84-.131 3.254ZM16.625 33.29c-.001-1.746.898-5.421 1.801-5.421.897 0 1.798 3.675 1.797 5.42 0 1.747-.804 2.712-1.8 2.71-.994.002-1.798-.962-1.798-2.71Zm16.179-9.262c-1.655-.54-4.858-2.533-4.579-3.395.277-.858 4.037-.581 5.69-.041 1.655.54 2.321 1.605 2.013 2.556-.308.95-1.469 1.42-3.124.88ZM2.083 20.594c1.655-.54 5.414-.817 5.694.044.276.857-2.928 2.854-4.581 3.392-1.654.54-2.818.07-3.123-.88-.308-.95.354-2.015 2.01-2.556Z"/>
+                    </svg>
+                    <div class="us__label">
+                        За 15 лет не создали сеть филиалов, потому что топовых преподавателей единицы!
+                    </div>
+                </div>
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#FCAB40" d="M27.999 36a1 1 0 0 1-.969-.758c-.036-.136-.926-3.436-4.273-4.272C18.054 29.794 18 23.277 18 23a1 1 0 0 1 .998-.999c.554.034 1 .445 1.002.997 0 .053.054 5.234 3.242 6.032 4.53 1.132 5.682 5.54 5.727 5.728a.997.997 0 0 1-.97 1.242Z"/>
+                        <path fill="#BB1A34" d="M18 25c-1.1 0-1.598-.805-1.105-1.789l1.211-2.422c.492-.984 1.297-.984 1.789 0l1.211 2.422C21.598 24.195 21.1 25 20 25h-2Z"/>
+                        <path fill="#BB1A34" d="M28 9c0 6-7 12-9 12s-9-6-9-12c0-5.799 4.582-9 9-9s9 3.201 9 9Z"/>
+                        <path fill="#FCAB40" d="M20 22h-2a1 1 0 0 1 0-2h2a1 1 0 0 1 0 2Z"/>
+                    </svg>
+                    <div class="us__label">
+                        Позитивная атмосфера в студии
+                    </div>
+                </div>
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#5C913B" d="M36 33.5a1.5 1.5 0 0 1-1.5 1.5h-33a1.5 1.5 0 1 1 0-3h33a1.5 1.5 0 0 1 1.5 1.5Z"/>
+                        <path fill="#A0041E" d="M12.344 14.702h-2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5Z"/>
+                        <path fill="#FFCC4D" d="M5.942 32c-.137-4.657-.506-8-.942-8-.435 0-.804 3.343-.941 8h1.883Z"/>
+                        <path fill="#77B255" d="M10 18.731C10 24.306 7.762 26 5 26c-2.761 0-5-1.694-5-7.269C0 13.154 4 5 5 5s5 8.154 5 13.731Z"/>
+                        <path fill="#FFE8B6" d="M8 16 21 3l13 13v16H8V16Z"/>
+                        <path fill="#FFCC4D" d="M21 16h1v16h-1V16Z"/>
+                        <path fill="#66757F" d="M34 17a.997.997 0 0 1-.707-.293L21 4.414 8.707 16.707a1 1 0 0 1-1.414-1.414l13-13a1 1 0 0 1 1.414 0l13 13A1 1 0 0 1 34 17Z"/>
+                        <path fill="#66757F" d="M21 17a.998.998 0 0 1-.707-1.707l6.5-6.5a1 1 0 1 1 1.414 1.414l-6.5 6.5A.997.997 0 0 1 21 17Z"/>
+                        <path fill="#C1694F" d="M13 26h4v6h-4v-6Z"/>
+                        <path fill="#55ACEE" d="M13 17h4v4h-4v-4Zm12.5 0h4v4h-4v-4Zm0 9h4v4h-4v-4Z"/>
+                        <path fill="#77B255" d="M10.625 29.99c0 1.614-.858 2.104-1.917 2.104-1.058 0-1.917-.49-1.917-2.103 0-1.613 1.533-3.973 1.917-3.973.384 0 1.917 2.359 1.917 3.973Zm25.25 0c0 1.614-.858 2.104-1.917 2.104-1.058 0-1.917-.49-1.917-2.103 0-1.613 1.533-3.973 1.917-3.973.384 0 1.917 2.359 1.917 3.973Z"/>
+                    </svg>
+                    <div class="us__label">
+                        Расположение офиса в центре Москвы – это безопасно и удобно
+                    </div>
+                </div>
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#FFCC4D" d="M18 36c9.941 0 18-8.059 18-18S27.941 0 18 0 0 8.059 0 18s8.059 18 18 18Z"/>
+                        <path fill="#664500" d="M10.515 23.621C10.56 23.8 11.683 28 18 28c6.318 0 7.44-4.2 7.485-4.379a.5.5 0 0 0-.837-.477C24.629 23.163 22.694 25 18 25s-6.63-1.837-6.648-1.855a.502.502 0 0 0-.812.157.5.5 0 0 0-.025.319ZM12 17c1.38 0 2.5-1.567 2.5-3.5S13.38 10 12 10s-2.5 1.567-2.5 3.5S10.62 17 12 17ZM24 17c1.38 0 2.5-1.567 2.5-3.5S25.38 10 24 10s-2.5 1.567-2.5 3.5S22.62 17 24 17Z"/>
+                    </svg>
+                    <div class="us__label">
+                        Во всех спорных ситуациях идём на встречу родителям
+                    </div>
+                </div>
+                <div class="us__item">
+                    <svg class="us__icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewBox="0 0 36 36">
+                        <path fill="#EF9645" d="m13.375 16.539.009.06-3.782-8.113c-.286-.611-1.148-.814-1.925-.451l-.061.028c-.68.317-1.071.963-.964 1.53 0 0-1.275-1.147-2.024-.797l-.06.027c-.749.35-1.123 1.136-.833 1.757l.533 1.192c-.301-.644-1.19-.866-1.985-.494l-.062.029c-.795.37-1.197 1.194-.896 1.838l5.131 13.15 6.794.212 2.031-6.25-1.906-3.718Zm20.478-5.231-.062-.03c-.796-.371-1.685-.15-1.985.495l.533-1.192c.29-.621-.084-1.408-.832-1.757l-.06-.027c-.749-.35-1.591-.13-1.882.492l-.143.306c.107-.567-.283-1.213-.964-1.53l-.062-.028c-.777-.363-1.639-.16-1.924.452l-3.771 8.088-.033-.114-2.021 4.52L24 27.375l6.195-4.463 4.554-9.766c.301-.644-.102-1.467-.896-1.838Z"/>
+                        <path fill="#FFDC5D" d="M35.81 15.672s.652-1.043-.455-1.558c-1.106-.515-1.482.657-1.482.657l-2.39 5.142c-.14-.164-.705-.516-.866-.67l3.315-7.137s.653-1.043-.455-1.558c-1.107-.514-1.483.657-1.483.657l-3.118 6.711c-.175-.099-.63-.327-.812-.423l3.616-7.78s.652-1.044-.455-1.559c-1.106-.515-1.482.657-1.482.657l-3.618 7.78c-.193-.078-.797-.335-.988-.404l3.38-7.272s.651-1.043-.455-1.558c-1.108-.515-1.483.657-1.483.657l-3.574 7.69-.286.616-.128.276c3.323 1.544 4.486 5.616 3.2 8.384-.258.554-1.177.3-1.177.3 1.544-3.32.358-6.566-2.964-8.109l.144-4.545s.134-1.213-1.079-1.348c-1.215-.134-1.349 1.08-1.349 1.08l-.509 3.183c-.203 1.262-.43 2.525-.81 3.746a7.328 7.328 0 0 0 13.647 5.247l.257-.556 3.858-8.306Z"/>
+                        <path fill="#FFDC5D" d="M.192 15.672s-.654-1.043.453-1.558c1.107-.515 1.482.657 1.482.657l2.39 5.142c.141-.164.705-.516.866-.67l-3.315-7.137s-.654-1.043.455-1.558c1.105-.514 1.482.657 1.482.657l3.119 6.711c.175-.099.63-.327.812-.423l-3.615-7.78s-.653-1.043.455-1.558c1.107-.515 1.483.657 1.483.657l3.618 7.78c.193-.078.797-.335.988-.404l-3.38-7.272s-.651-1.043.455-1.558c1.107-.515 1.483.657 1.483.657l3.574 7.69.286.616.128.276c-3.323 1.544-4.486 5.616-3.2 8.384.258.554 1.177.3 1.177.3-1.544-3.32-.358-6.566 2.963-8.109l-.143-4.545s-.134-1.213 1.078-1.348c1.215-.134 1.35 1.08 1.35 1.08l.508 3.183c.203 1.262.432 2.525.811 3.746a7.328 7.328 0 0 1-13.648 5.247l-.256-.556-3.859-8.307Z"/>
+                    </svg>
+                    <div class="us__label">
+                        Всегда рады гостям в студии
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="online container container--wide">
             <h2 class="online__heading title">
                 Хотите заниматься онлайн?
