--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,5 +28,7 @@
 @import url("_faq.css");
 @import url("_online.css");
 @import url("_us.css");
+@import url("_schedule.css");
+@import url("_stamp.css");
 
 
