--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,39 @@
             </div>
         <![endif]-->
 
+        <section class="schedule container">
+            <div class="schedule__stamp stamp">
+                <svg class="stamp__icon" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="none" viewBox="0 0 50 50">
+                    <path fill="#fff" d="M50 47.222A2.778 2.778 0 0 1 47.222 50H2.778A2.778 2.778 0 0 1 0 47.222V20.833a2.778 2.778 0 0 1 2.778-2.777h44.444A2.778 2.778 0 0 1 50 20.832v26.39Z"/>
+                    <path fill="#6D6E71" d="M47.222 18.055H2.778A2.778 2.778 0 0 0 0 20.833h50a2.778 2.778 0 0 0-2.778-2.777Z"/>
+                    <path fill="#3B88C3" d="M2.778 33.333h44.444v5.556H2.778v-5.556Zm0-8.333h44.444v5.556H2.778V25Zm0 16.667h44.444v5.555H2.778v-5.555Z"/>
+                    <path fill="#fff" d="M38.889 23.611h2.778v25h-2.778v-25Z"/>
+                    <path fill="#FFE8B6" d="M30.556 0H8.333a2.778 2.778 0 0 0-2.777 2.778V50h27.777V2.778A2.778 2.778 0 0 0 30.556 0Z"/>
+                    <path fill="#808285" d="M30.556 0H8.333a2.778 2.778 0 0 0-2.777 2.778h27.777A2.778 2.778 0 0 0 30.556 0Z"/>
+                    <path fill="#55ACEE" d="M8.333 25h22.223v5.556H8.333V25Zm0 8.333h22.223v5.556H8.333v-5.556Zm0 8.334h22.223v5.555H8.333v-5.555Z"/>
+                    <path fill="#FFE8B6" d="M13.889 9.723h2.778V50h-2.778V9.723Zm8.333 0H25V50h-2.778V9.723Z"/>
+                    <path fill="#269" d="M16.667 41.667h5.555V50h-5.555v-8.333Z"/>
+                    <path fill="#A7A9AC" d="M19.444 20.834a8.333 8.333 0 1 0 0-16.667 8.333 8.333 0 0 0 0 16.667Z"/>
+                    <path fill="#E6E7E8" d="M19.444 18.056a5.556 5.556 0 1 0 0-11.112 5.556 5.556 0 0 0 0 11.112Z"/>
+                    <path fill="#FC5E38" d="M23.611 13.89h-4.166a1.389 1.389 0 0 1-1.39-1.39V5.556a1.389 1.389 0 1 1 2.778 0v5.555h2.778a1.39 1.39 0 0 1 0 2.778Z"/>
+                </svg>
+            </div>
+            <div class="schedule__body">
+                <div class="schedule__total">
+                    Ежегодно обучается <strong>не более 200 детей</strong>
+                </div>
+                <h2 class="schedule__heading title">
+                    Занятия проходят в будни после 17:00 и в выходные
+                </h2>
+                <a class="schedule__submit button" href="#">
+                    Узнать точное расписание
+                    <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                        <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
+
         <section class="us container container--wide">
             <h2 class="us__heading title">
                 Почему выбирают именно нас?
@@ -480,7 +513,7 @@
 
             <div class="cta container">
                 <div class="cta__frame">
-                    <button class="button" type="button">
+                    <button class="cta__action button" type="button">
                         Сдать ЕГЭ на 100 баллов с нами
                         <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
                             <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
