--- a/src/styles/_cta.css
+++ b/src/styles/_cta.css
@@ -11,7 +11,9 @@
         background-repeat: no-repeat;
         background-position: center center;
     }
+        .cta__action {
 
+        }
 
 
 @media (width < 740px) {
@@ -23,17 +25,20 @@
             height: auto;
             background-image: none;
         }
-            .cta__frame .button {
+            .cta__action {
 
             }
+                .cta__action .button {
 
-            @media (width < 350px) {
+                }
 
-                .cta__frame .button {
-                    font-size: 16px;
+                @media (width < 350px) {
+
+                    .cta__action .button {
+                        font-size: 16px;
+                    }
                 }
-            }
-                .cta__frame .button__icon {
-                    display: none;
-                }
+                    .cta__action .button__icon {
+                        display: none;
+                    }
 }
