--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,41 @@
             </div>
         <![endif]-->
 
+        <section class="features container container--wide">
+            <h2 class="features__heading title">
+                Ваш ребенок в 10 классе?<br> Сэкономьте до 30% на подготовке к ЕГЭ до 1 июня!
+            </h2>
+            <div class="features__list">
+                <div class="features__item">
+                    2 урока в неделю по 120 минут
+                </div>
+                <div class="features__item">
+                    Входное тестирование
+                </div>
+                <div class="features__item">
+                    Мини-группы до 8 человек по уровню знаний
+                </div>
+                <div class="features__item">
+                    Отчёты родителям об успеваемости
+                </div>
+                <div class="features__item">
+                    Пробные ЕГЭ каждый месяц
+                </div>
+                <div class="features__item">
+                    80% практики
+                </div>
+                <div class="features__item">
+                    Связь с преподавателем
+                </div>
+                <a class="features__action button" href="#">
+                    Забронировать скидку
+                    <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                        <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
+
         <section class="schedule container">
             <div class="schedule__stamp stamp">
                 <svg class="stamp__icon" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="none" viewBox="0 0 50 50">
