--- a/src/styles/_us.css
+++ b/src/styles/_us.css
@@ -74,6 +74,10 @@
 
                 .us__label {
                     margin-top: 10px;
+                    max-width: 400px;
+                    margin-left: auto;
+                    margin-right: auto;
                     text-align: center;
+                    text-wrap: balance;
                 }
 }
