--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,38 @@
             </div>
         <![endif]-->
 
+        <section class="courses container container--wide">
+            <h2 class="courses__heading title">
+                Курсы ЕГЭ-Студии по другим предметам
+            </h2>
+            <div class="courses__list">
+                <a class="courses__item" href="#">
+                    Математика профильная
+                </a>
+                <a class="courses__item" href="#">
+                    Русский язык
+                </a>
+                <a class="courses__item" href="#">
+                    Литература
+                </a>
+                <a class="courses__item" href="#">
+                    Биология
+                </a>
+                <a class="courses__item" href="#">
+                    Физика
+                </a>
+                <a class="courses__item" href="#">
+                    История
+                </a>
+                <a class="courses__item" href="#">
+                    Обществознание
+                </a>
+                <a class="courses__item" href="#">
+                    Английский язык
+                </a>
+            </div>
+        </section>
+
         <section class="features container container--wide">
             <h2 class="features__heading title">
                 Ваш ребенок в 10 классе?<br> Сэкономьте до 30% на подготовке к ЕГЭ до 1 июня!
