--- a/src/styles/_courses.css
+++ b/src/styles/_courses.css
@@ -1,61 +1,62 @@
-.features {
+.courses {
     --radius: 8px;
 }
 
-.features {
+.courses {
     margin-top: 120px;
 }
-    .features__heading {
+    .courses__heading {
         margin-top: 0;
         margin-bottom: 0;
         text-align: center;
     }
 
-    .features__list {
+    .courses__list {
         margin-top: 70px;
         display: grid;
         grid-template-columns: repeat(4, minmax(0, 1fr));
-        grid-auto-rows: minmax(100px, auto);
+        grid-auto-rows: minmax(96px, auto);
         gap: 20px;
     }
-        .features__item {
+        .courses__item {
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 26px 20px;
-            background-color: rgb(255 255 255 / 80%);
-            border-radius: 15px;
-            font-size: 20px;
-            line-height: 24px;
+            padding: 20px 30px;
+            box-shadow: inset 0 0 0 4px #FFFFFF;
+            border-radius: 8px;
+            font-size: 24px;
+            line-height: 28px;
             text-align: center;
+            text-decoration: none;
+            color: inherit;
+            transition: background-color var(--transition-hover);
         }
 
-        .features__action.button,
-        .features__action .button {
-            border-radius: 15px;
+        .courses__item:hover {
+            background-color: #FFFFFF;
         }
-
 
 
 @media (width < 740px) {
 
-    .features {
+    .courses {
         margin-top: 90px;
     }
-        .features__heading {
+        .courses__heading {
             /*margin-top: 0;*/
             /*margin-bottom: 0;*/
             /*text-align: center;*/
         }
 
-        .features__list {
+        .courses__list {
             margin-top: 40px;
             display: grid;
             grid-template-columns: auto;
             grid-auto-rows: auto;
-            /*gap: 20px;*/
+            gap: 12px;
         }
-            .features__item {
+            .courses__item {
                 /*display: flex;*/
                 /*align-items: center;*/
                 /*justify-content: center;*/
@@ -67,11 +68,4 @@
                 /*text-align: center;*/
             }
 
-            .features__action {
-                margin-top: 20px;
-            }
-                .features__action.button,
-                .features__action .button {
-                    border-radius: var(--radius);
-                }
 }
