--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -55,6 +55,15 @@
             </div>
         <![endif]-->
 
+
+        <section class="trial container container--wide">
+            <div class="trial__panel">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, nam sapiente. A alias architecto assumenda blanditiis cum, cupiditate debitis distinctio, earum eum exercitationem fuga illo inventore nemo quas quod rem repudiandae temporibus vel, vero voluptatibus! Deserunt ipsa labore nostrum similique soluta temporibus tenetur totam. Aliquid debitis fugiat fugit quia suscipit. Amet aperiam assumenda atque consectetur corporis cumque distinctio enim ex exercitationem in ipsa laborum, laudantium minima molestias mollitia nesciunt nobis nulla odit officiis pariatur perferendis provident quaerat quam qui quidem quo quod recusandae rem repellat repellendus sequi, soluta tenetur vitae. Amet consequatur deserunt eaque magni, non provident ut! Ea, repellendus.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, nam sapiente. A alias architecto assumenda blanditiis cum, cupiditate debitis distinctio, earum eum exercitationem fuga illo inventore nemo quas quod rem repudiandae temporibus vel, vero voluptatibus! Deserunt ipsa labore nostrum similique soluta temporibus tenetur totam. Aliquid debitis fugiat fugit quia suscipit. Amet aperiam assumenda atque consectetur corporis cumque distinctio enim ex exercitationem in ipsa laborum, laudantium minima molestias mollitia nesciunt nobis nulla odit officiis pariatur perferendis provident quaerat quam qui quidem quo quod recusandae rem repellat repellendus sequi, soluta tenetur vitae. Amet consequatur deserunt eaque magni, non provident ut! Ea, repellendus.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, nam sapiente. A alias architecto assumenda blanditiis cum, cupiditate debitis distinctio, earum eum exercitationem fuga illo inventore nemo quas quod rem repudiandae temporibus vel, vero voluptatibus! Deserunt ipsa labore nostrum similique soluta temporibus tenetur totam. Aliquid debitis fugiat fugit quia suscipit. Amet aperiam assumenda atque consectetur corporis cumque distinctio enim ex exercitationem in ipsa laborum, laudantium minima molestias mollitia nesciunt nobis nulla odit officiis pariatur perferendis provident quaerat quam qui quidem quo quod recusandae rem repellat repellendus sequi, soluta tenetur vitae. Amet consequatur deserunt eaque magni, non provident ut! Ea, repellendus.
+            </div>
+        </section>
+
         <section class="courses container container--wide">
             <h2 class="courses__heading title">
                 Курсы ЕГЭ-Студии по другим предметам
